--- a/Final/Project/CSS/catalogue.css
+++ b/Final/Project/CSS/catalogue.css
@@ -8,12 +8,17 @@ body {
 }
 
 #logo {
-    width: 100px;
-    height: 55px;
+    width: 150px;
+    height: 82px;
+    object-fit: cover;
+    border-radius: 6px;
     position: absolute;
-    left: 10px;
     top: 10px;
+    left: 10px;
 }
+
+
+
 
 #selector {
     text-align: center;
