Created table to show the campared info

--- a/Final/Project/CSS/compare.css
+++ b/Final/Project/CSS/compare.css
@@ -13,4 +13,46 @@ body {
     color: white;
 }
 
+h1 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#selectors {
+    text-align: center;
+    margin: 20px;
+}
+
+select {
+    padding: 5px;
+    margin: 0 10px;
+}
+
+#comparison-box {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+th, td {
+    border: 1px solid white;
+    padding: 10px;
+}
+
+
+
+#footer {
+    text-align: center;
+    color: white;
+    margin-top: 50px;
+    padding: 20px;
+    font-size: 14px;
+    opacity: 0.7;
+}
 
