--- a/Final/Project/CSS/marketplace.css
+++ b/Final/Project/CSS/marketplace.css
@@ -1,4 +1,154 @@
 body{
     background-color: black;
     color: white;
+    padding-top: 110px;
+}
+
+
+#logo {
+    width: 150px;
+    height: 82px;
+    object-fit: cover;
+    border-radius: 6px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+
+
+h2{
+    color:white;
+    margin:20px
+}
+
+#marketplace {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.listing-card {
+    background: #1e1e1e;
+    border-radius: 10px;
+    width: 230px;
+    overflow: hidden;
+    color: white;
+}
+
+.listing-img {
+    height: 140px;
+    background: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #aaa;
+    font-size: 14px;
+}
+
+.listing-info {
+    padding: 10px;
+}
+
+.listing-info h3 {
+    font-size: 14px;
+    margin: 5px 0;
+}
+
+.listing-info p {
+    font-size: 12px;
+    color: #bbb;
+}
+
+.listing-meta {
+    display: flex;
+    gap: 10px;
+    font-size: 11px;
+    margin: 8px 0;
+}
+
+.price {
+    font-weight: bold;
+    margin-top: 5px;
+}
+
+
+
+
+
+
+#filter-box {
+    background: #111;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+#filter-box h2 {
+    margin-bottom: 15px;
+}
+
+.filter-row {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 15px;
+    flex-wrap: wrap;
+}
+
+.type-btn {
+    background: none;
+    border: 1px solid #444;
+    color: white;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
+.type-btn.active {
+    background: red;
+    border: none;
+}
+
+.filter-item {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+}
+
+.filter-item select,
+.filter-item input[type="range"] {
+    padding: 5px;
+    background: #222;
+    color: white;
+    border: 1px solid #444;
+}
+
+.radio-group {
+    display: flex;
+    gap: 10px;
+}
+
+.buttons {
+    justify-content: space-between;
+}
+
+.reset-btn {
+    background: none;
+    color: white;
+    border: 1px solid #444;
+    padding: 6px 15px;
+}
+
+.search-btn {
+    background: green;
+    color: white;
+    border: none;
+    padding: 6px 20px;
+
+}
+
+.buttons {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
 }
