--- a/Final/Project/CSS/checkout.css
+++ b/Final/Project/CSS/checkout.css
@@ -4,6 +4,17 @@ body {
     font-family: Arial;
 }
 
+#logo {
+    width: 150px;
+    height: 82px;
+    object-fit: cover;
+    border-radius: 6px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+
 h2 {
     text-align: center;
     margin-top: 40px;
