--- a/Final/Project/CSS/compare.css
+++ b/Final/Project/CSS/compare.css
@@ -60,3 +60,19 @@ th, td {
     opacity: 0.7;
 }
 
+
+
+
+
+#selectors button {
+    background: orange;
+    color: black;
+    border: none;
+    padding: 8px 16px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+#selectors button:hover {
+    background: darkorange;
+}
