--- a/Project/car website/Admin/View/CSS/admin_dashboard.css
+++ b/Project/car website/Admin/View/CSS/admin_dashboard.css
@@ -5,7 +5,7 @@ body {
 
     background:
         linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
-        url("../images/admin_bg.png"); 
+        url("../../../images/admin_bg.png"); 
         background-repeat: no-repeat;
        background-position: center;
        background-attachment: fixed;
